exports[`prefer-array-index-of > invalid(1): values.findIndex(x => x === \"foo\") 1`] = `

  1 | values.findIndex(x => x === "foo")

`;

exports[`prefer-array-index-of > invalid(1): values.findIndex(x => x === \"foo\") 2`] = `

Message:
> 1 | values.findIndex(x => x === "foo")
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values.indexOf("foo")

`;

exports[`prefer-array-index-of > invalid(1): values.findLastIndex(x => x === \"foo\") 1`] = `

  1 | values.findLastIndex(x => x === "foo")

`;

exports[`prefer-array-index-of > invalid(1): values.findLastIndex(x => x === \"foo\") 2`] = `

Message:
> 1 | values.findLastIndex(x => x === "foo")
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values.lastIndexOf("foo")

`;

exports[`prefer-array-index-of > invalid(10): function fn() {\n\tfoo.findIndex(x => x === arguments.length)\n} 1`] = `

  1 | function fn() {
  2 | 	foo.findIndex(x => x === arguments.length)
  3 | }

`;

exports[`prefer-array-index-of > invalid(10): function fn() {\n\tfoo.findIndex(x => x === arguments.length)\n} 2`] = `

Message:
  1 | function fn() {
> 2 | 	foo.findIndex(x => x === arguments.length)
    | 	    ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.
  3 | }

Output:
  1 | function fn() {
  2 | 	foo.indexOf(arguments.length)
  3 | }

`;

exports[`prefer-array-index-of > invalid(10): function fn() {\n\tfoo.findLastIndex(x => x === arguments.length)\n} 1`] = `

  1 | function fn() {
  2 | 	foo.findLastIndex(x => x === arguments.length)
  3 | }

`;

exports[`prefer-array-index-of > invalid(10): function fn() {\n\tfoo.findLastIndex(x => x === arguments.length)\n} 2`] = `

Message:
  1 | function fn() {
> 2 | 	foo.findLastIndex(x => x === arguments.length)
    | 	    ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`
  3 | }

Output:
  1 | function fn() {
  2 | 	foo.lastIndexOf(arguments.length)
  3 | }

`;

exports[`prefer-array-index-of > invalid(11): function fn() {\n\tfoo.findIndex(x => x === this[1])\n} 1`] = `

  1 | function fn() {
  2 | 	foo.findIndex(x => x === this[1])
  3 | }

`;

exports[`prefer-array-index-of > invalid(11): function fn() {\n\tfoo.findIndex(x => x === this[1])\n} 2`] = `

Message:
  1 | function fn() {
> 2 | 	foo.findIndex(x => x === this[1])
    | 	    ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.
  3 | }

Output:
  1 | function fn() {
  2 | 	foo.indexOf(this[1])
  3 | }

`;

exports[`prefer-array-index-of > invalid(11): function fn() {\n\tfoo.findLastIndex(x => x === this[1])\n} 1`] = `

  1 | function fn() {
  2 | 	foo.findLastIndex(x => x === this[1])
  3 | }

`;

exports[`prefer-array-index-of > invalid(11): function fn() {\n\tfoo.findLastIndex(x => x === this[1])\n} 2`] = `

Message:
  1 | function fn() {
> 2 | 	foo.findLastIndex(x => x === this[1])
    | 	    ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`
  3 | }

Output:
  1 | function fn() {
  2 | 	foo.lastIndexOf(this[1])
  3 | }

`;

exports[`prefer-array-index-of > invalid(12): values.findIndex(x => x === foo()) 1`] = `

  1 | values.findIndex(x => x === foo())

`;

exports[`prefer-array-index-of > invalid(12): values.findIndex(x => x === foo()) 2`] = `

Message:
> 1 | values.findIndex(x => x === foo())
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Suggestion 1/1: Replace \`.findIndex()\` with \`.indexOf()\`.:
  1 | values.indexOf(foo())

`;

exports[`prefer-array-index-of > invalid(12): values.findLastIndex(x => x === foo()) 1`] = `

  1 | values.findLastIndex(x => x === foo())

`;

exports[`prefer-array-index-of > invalid(12): values.findLastIndex(x => x === foo()) 2`] = `

Message:
> 1 | values.findLastIndex(x => x === foo())
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Suggestion 1/1: Replace \`.findLastIndex()\` with \`.lastIndexOf()\`.:
  1 | values.lastIndexOf(foo())

`;

exports[`prefer-array-index-of > invalid(13): foo.findIndex(function a(x) {\n\treturn x === (function (a) {\n\t\treturn a(this) === arguments[1]\n\t}).call(thisObject, anotherFunctionNamedA, secondArgument)\n}) 1`] = `

  1 | foo.findIndex(function a(x) {
  2 | 	return x === (function (a) {
  3 | 		return a(this) === arguments[1]
  4 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument)
  5 | })

`;

exports[`prefer-array-index-of > invalid(13): foo.findIndex(function a(x) {\n\treturn x === (function (a) {\n\t\treturn a(this) === arguments[1]\n\t}).call(thisObject, anotherFunctionNamedA, secondArgument)\n}) 2`] = `

Message:
> 1 | foo.findIndex(function a(x) {
    |     ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.
  2 | 	return x === (function (a) {
  3 | 		return a(this) === arguments[1]
  4 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument)
  5 | })

Suggestion 1/1: Replace \`.findIndex()\` with \`.indexOf()\`.:
  1 | foo.indexOf((function (a) {
  2 | 		return a(this) === arguments[1]
  3 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument))

`;

exports[`prefer-array-index-of > invalid(13): foo.findLastIndex(function a(x) {\n\treturn x === (function (a) {\n\t\treturn a(this) === arguments[1]\n\t}).call(thisObject, anotherFunctionNamedA, secondArgument)\n}) 1`] = `

  1 | foo.findLastIndex(function a(x) {
  2 | 	return x === (function (a) {
  3 | 		return a(this) === arguments[1]
  4 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument)
  5 | })

`;

exports[`prefer-array-index-of > invalid(13): foo.findLastIndex(function a(x) {\n\treturn x === (function (a) {\n\t\treturn a(this) === arguments[1]\n\t}).call(thisObject, anotherFunctionNamedA, secondArgument)\n}) 2`] = `

Message:
> 1 | foo.findLastIndex(function a(x) {
    |     ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`
  2 | 	return x === (function (a) {
  3 | 		return a(this) === arguments[1]
  4 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument)
  5 | })

Suggestion 1/1: Replace \`.findLastIndex()\` with \`.lastIndexOf()\`.:
  1 | foo.lastIndexOf((function (a) {
  2 | 		return a(this) === arguments[1]
  3 | 	}).call(thisObject, anotherFunctionNamedA, secondArgument))

`;

exports[`prefer-array-index-of > invalid(2): values?.findIndex(x => x === \"foo\") 1`] = `

  1 | values?.findIndex(x => x === "foo")

`;

exports[`prefer-array-index-of > invalid(2): values?.findIndex(x => x === \"foo\") 2`] = `

Message:
> 1 | values?.findIndex(x => x === "foo")
    |         ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values?.indexOf("foo")

`;

exports[`prefer-array-index-of > invalid(2): values?.findLastIndex(x => x === \"foo\") 1`] = `

  1 | values?.findLastIndex(x => x === "foo")

`;

exports[`prefer-array-index-of > invalid(2): values?.findLastIndex(x => x === \"foo\") 2`] = `

Message:
> 1 | values?.findLastIndex(x => x === "foo")
    |         ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values?.lastIndexOf("foo")

`;

exports[`prefer-array-index-of > invalid(3): values.findIndex(x => \"foo\" === x) 1`] = `

  1 | values.findIndex(x => "foo" === x)

`;

exports[`prefer-array-index-of > invalid(3): values.findIndex(x => \"foo\" === x) 2`] = `

Message:
> 1 | values.findIndex(x => "foo" === x)
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values.indexOf("foo")

`;

exports[`prefer-array-index-of > invalid(3): values.findLastIndex(x => \"foo\" === x) 1`] = `

  1 | values.findLastIndex(x => "foo" === x)

`;

exports[`prefer-array-index-of > invalid(3): values.findLastIndex(x => \"foo\" === x) 2`] = `

Message:
> 1 | values.findLastIndex(x => "foo" === x)
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values.lastIndexOf("foo")

`;

exports[`prefer-array-index-of > invalid(4): values.findIndex(x => {return x === \"foo\";}) 1`] = `

  1 | values.findIndex(x => {return x === "foo";})

`;

exports[`prefer-array-index-of > invalid(4): values.findIndex(x => {return x === \"foo\";}) 2`] = `

Message:
> 1 | values.findIndex(x => {return x === "foo";})
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values.indexOf("foo")

`;

exports[`prefer-array-index-of > invalid(4): values.findLastIndex(x => {return x === \"foo\";}) 1`] = `

  1 | values.findLastIndex(x => {return x === "foo";})

`;

exports[`prefer-array-index-of > invalid(4): values.findLastIndex(x => {return x === \"foo\";}) 2`] = `

Message:
> 1 | values.findLastIndex(x => {return x === "foo";})
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values.lastIndexOf("foo")

`;

exports[`prefer-array-index-of > invalid(5): values.findIndex(function (x) {return x === \"foo\";}) 1`] = `

  1 | values.findIndex(function (x) {return x === "foo";})

`;

exports[`prefer-array-index-of > invalid(5): values.findIndex(function (x) {return x === \"foo\";}) 2`] = `

Message:
> 1 | values.findIndex(function (x) {return x === "foo";})
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values.indexOf("foo")

`;

exports[`prefer-array-index-of > invalid(5): values.findLastIndex(function (x) {return x === \"foo\";}) 1`] = `

  1 | values.findLastIndex(function (x) {return x === "foo";})

`;

exports[`prefer-array-index-of > invalid(5): values.findLastIndex(function (x) {return x === \"foo\";}) 2`] = `

Message:
> 1 | values.findLastIndex(function (x) {return x === "foo";})
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values.lastIndexOf("foo")

`;

exports[`prefer-array-index-of > invalid(6): // 1\n(0, values)\n\t// 2\n\t./* 3 */findIndex /* 3 */ (\n\t\t/* 4 */\n\t\tx /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ \"foo\" /* 9 */\n\t) /* 10 */ 1`] = `

  1 | // 1
  2 | (0, values)
  3 | 	// 2
  4 | 	./* 3 */findIndex /* 3 */ (
  5 | 		/* 4 */
  6 | 		x /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ "foo" /* 9 */
  7 | 	) /* 10 */

`;

exports[`prefer-array-index-of > invalid(6): // 1\n(0, values)\n\t// 2\n\t./* 3 */findIndex /* 3 */ (\n\t\t/* 4 */\n\t\tx /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ \"foo\" /* 9 */\n\t) /* 10 */ 2`] = `

Message:
  1 | // 1
  2 | (0, values)
  3 | 	// 2
> 4 | 	./* 3 */findIndex /* 3 */ (
    | 	        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.
  5 | 		/* 4 */
  6 | 		x /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ "foo" /* 9 */
  7 | 	) /* 10 */

`;

exports[`prefer-array-index-of > invalid(6): // 1\n(0, values)\n\t// 2\n\t./* 3 */findLastIndex /* 3 */ (\n\t\t/* 4 */\n\t\tx /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ \"foo\" /* 9 */\n\t) /* 10 */ 1`] = `

  1 | // 1
  2 | (0, values)
  3 | 	// 2
  4 | 	./* 3 */findLastIndex /* 3 */ (
  5 | 		/* 4 */
  6 | 		x /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ "foo" /* 9 */
  7 | 	) /* 10 */

`;

exports[`prefer-array-index-of > invalid(6): // 1\n(0, values)\n\t// 2\n\t./* 3 */findLastIndex /* 3 */ (\n\t\t/* 4 */\n\t\tx /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ \"foo\" /* 9 */\n\t) /* 10 */ 2`] = `

Message:
  1 | // 1
  2 | (0, values)
  3 | 	// 2
> 4 | 	./* 3 */findLastIndex /* 3 */ (
    | 	        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`
  5 | 		/* 4 */
  6 | 		x /* 5 */ => /* 6 */ x /* 7 */ === /* 8 */ "foo" /* 9 */
  7 | 	) /* 10 */

`;

exports[`prefer-array-index-of > invalid(7): foo.findIndex(function (element) {\n\treturn element === bar.findIndex(x => x === 1);\n}); 1`] = `

  1 | foo.findIndex(function (element) {
  2 | 	return element === bar.findIndex(x => x === 1);
  3 | });

`;

exports[`prefer-array-index-of > invalid(7): foo.findIndex(function (element) {\n\treturn element === bar.findIndex(x => x === 1);\n}); 2`] = `

Message:
> 1 | foo.findIndex(function (element) {
    |     ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.
  2 | 	return element === bar.findIndex(x => x === 1);
  3 | });

Suggestion 1/1: Replace \`.findIndex()\` with \`.indexOf()\`.:
  1 | foo.indexOf(bar.findIndex(x => x === 1));

`;

exports[`prefer-array-index-of > invalid(7): foo.findIndex(function (element) {\n\treturn element === bar.findIndex(x => x === 1);\n}); 3`] = `

Message:
  1 | foo.findIndex(function (element) {
> 2 | 	return element === bar.findIndex(x => x === 1);
    | 	                       ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.
  3 | });

Output:
  1 | foo.findIndex(function (element) {
  2 | 	return element === bar.indexOf(1);
  3 | });

`;

exports[`prefer-array-index-of > invalid(7): foo.findLastIndex(function (element) {\n\treturn element === bar.findLastIndex(x => x === 1);\n}); 1`] = `

  1 | foo.findLastIndex(function (element) {
  2 | 	return element === bar.findLastIndex(x => x === 1);
  3 | });

`;

exports[`prefer-array-index-of > invalid(7): foo.findLastIndex(function (element) {\n\treturn element === bar.findLastIndex(x => x === 1);\n}); 2`] = `

Message:
> 1 | foo.findLastIndex(function (element) {
    |     ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`
  2 | 	return element === bar.findLastIndex(x => x === 1);
  3 | });

Suggestion 1/1: Replace \`.findLastIndex()\` with \`.lastIndexOf()\`.:
  1 | foo.lastIndexOf(bar.findLastIndex(x => x === 1));

`;

exports[`prefer-array-index-of > invalid(7): foo.findLastIndex(function (element) {\n\treturn element === bar.findLastIndex(x => x === 1);\n}); 3`] = `

Message:
  1 | foo.findLastIndex(function (element) {
> 2 | 	return element === bar.findLastIndex(x => x === 1);
    | 	                       ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`
  3 | });

Output:
  1 | foo.findLastIndex(function (element) {
  2 | 	return element === bar.lastIndexOf(1);
  3 | });

`;

exports[`prefer-array-index-of > invalid(8): values.findIndex(x => x === (0, \"foo\")) 1`] = `

  1 | values.findIndex(x => x === (0, "foo"))

`;

exports[`prefer-array-index-of > invalid(8): values.findIndex(x => x === (0, \"foo\")) 2`] = `

Message:
> 1 | values.findIndex(x => x === (0, "foo"))
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values.indexOf((0, "foo"))

`;

exports[`prefer-array-index-of > invalid(8): values.findLastIndex(x => x === (0, \"foo\")) 1`] = `

  1 | values.findLastIndex(x => x === (0, "foo"))

`;

exports[`prefer-array-index-of > invalid(8): values.findLastIndex(x => x === (0, \"foo\")) 2`] = `

Message:
> 1 | values.findLastIndex(x => x === (0, "foo"))
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values.lastIndexOf((0, "foo"))

`;

exports[`prefer-array-index-of > invalid(9): values.findIndex((x => x === (0, \"foo\"))) 1`] = `

  1 | values.findIndex((x => x === (0, "foo")))

`;

exports[`prefer-array-index-of > invalid(9): values.findIndex((x => x === (0, \"foo\"))) 2`] = `

Message:
> 1 | values.findIndex((x => x === (0, "foo")))
    |        ^^^^^^^^^ Use \`.indexOf()\` instead of \`.findIndex()\` when looking for the index of an item.

Output:
  1 | values.indexOf((0, "foo"))

`;

exports[`prefer-array-index-of > invalid(9): values.findLastIndex((x => x === (0, \"foo\"))) 1`] = `

  1 | values.findLastIndex((x => x === (0, "foo")))

`;

exports[`prefer-array-index-of > invalid(9): values.findLastIndex((x => x === (0, \"foo\"))) 2`] = `

Message:
> 1 | values.findLastIndex((x => x === (0, "foo")))
    |        ^^^^^^^^^^^^^ Use \`.lastIndexOf()\` instead of \`.findLastIndex() when looking for the index of an item.\`

Output:
  1 | values.lastIndexOf((0, "foo"))

`;
